--- a/compose/shenyu/docker-compose-mysql.yaml
+++ b/compose/shenyu/docker-compose-mysql.yaml
@@ -38,7 +38,7 @@ services:
       - spring.profiles.active=mysql
       - spring.datasource.url=jdbc:mysql://db:3306/shenyu?useUnicode=true&characterEncoding=utf-8&useSSL=false
       - spring.datasource.username=root
-      - spring.datasource.password=xyzj1a2y3
+      - spring.datasource.password=${MYSQL_ROOT_PASSWD}
     volumes:
       - ./shenyu-admin/logs/:/opt/shenyu-admin/logs
       - ./shenyu-admin/conf/:/opt/shenyu-admin/conf
@@ -52,9 +52,9 @@ services:
         condition: service_healthy
   db:
     image: docker.io/mysql:5.7
-    container_name: sydb
+    container_name: db
     environment:
-      MYSQL_ROOT_PASSWORD: xyzj1a2y3
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWD}
       MYSQL_DATABASE: shenyu
     ports:
       - 3310:3306
