--- a/resources/elk/7.13.4/kibana/config/kibana.yml
+++ b/resources/elk/7.13.4/kibana/config/kibana.yml
@@ -6,3 +6,4 @@
 server.host: "0"
 elasticsearch.hosts: [ "http://elasticsearch:9200" ]
 monitoring.ui.container.elasticsearch.enabled: true
+elasticsearch.username: "kibana_system"
