--- a/compose/nacos/.env
+++ b/compose/nacos/.env
@@ -1,1 +1,9 @@
 NACOS_VERSION=v2.1.1
+VOLUMES=../../volumes/compose/nacos
+
+MYSQL_NETWORK=netyooonn
+MYSQL_ALIAS=mysql8
+NACOS_ALIAS=nacos
+MYSQL_USER=root
+MYSQL_PASSWD=root
+MYSQL_PORT=3307
