--- a/resources/pandoranext/nginx.conf
+++ b/resources/pandoranext/nginx.conf
@@ -8,7 +8,7 @@ error_log /var/log/nginx/error.log notice;
 pid /run/nginx.pid;
 
 # Load dynamic modules. See /usr/share/doc/nginx/README.dynamic.
-include /usr/share/nginx/modules/*.conf;
+# include /usr/share/nginx/modules/*.conf;
 
 events {
     worker_connections 1024;
@@ -32,15 +32,15 @@ http {
     # Load modular configuration files from the /etc/nginx/conf.d directory.
     # See http://nginx.org/en/docs/ngx_core_module.html#include
     # for more information.
-    include /etc/nginx/conf.d/*.conf;
+    # include /etc/nginx/conf.d/*.conf;
 
     server {
         listen       80;
         listen       [::]:80;
-        server_name  _;
+        server_name  chat.yooonn.space;
 
         # Load configuration files for the default server block.
-        include /etc/nginx/default.d/*.conf;
+        # include /etc/nginx/default.d/*.conf;
 
     	location / {
     		proxy_http_version 	1.1;
