feat: ChatGPT-next

--- a/compose/chatgpt-next/.env
+++ b/compose/chatgpt-next/.env
@@ -1,3 +1,5 @@
 PASSWD=your_passwd
 OPEN_API_KEY=sk-xxxx
-PROXY_URL=https://api.openai-hk.com
+PROXY_URL=
+BASE_URL=https://api.openai-hk.com
+CUSTOM_MODELS=-all,+gpt-4-1106-preview,+gpt-3.5-turbo,+gpt-3.5-turbo-1106
