--- a/resources/nginx/default-nginx.conf
+++ b/resources/nginx/default-nginx.conf
@@ -8,7 +8,7 @@ error_log /var/log/nginx/error.log notice;
 pid /run/nginx.pid;
 
 # Load dynamic modules. See /usr/share/doc/nginx/README.dynamic.
-# include /usr/share/nginx/modules/*.conf;
+include /usr/share/nginx/modules/*.conf;
 
 events {
     worker_connections 1024;
@@ -32,34 +32,25 @@ http {
     # Load modular configuration files from the /etc/nginx/conf.d directory.
     # See http://nginx.org/en/docs/ngx_core_module.html#include
     # for more information.
-    # include /etc/nginx/conf.d/*.conf;
+    include /opt/nginx/conf.d/*.conf;
 
-    server {
-        listen       80;
-        listen       [::]:80;
-        server_name  chat.yooonn.space;
-
-        # Load configuration files for the default server block.
-        # include /etc/nginx/default.d/*.conf;
-
-    	location / {
-    		proxy_http_version 	1.1;
-    		proxy_pass 		http://127.0.0.1:8181/;
-    		proxy_set_header	Connection		"";
-    		proxy_set_header   	Host			$http_host;
-    		proxy_set_header 	X-Forwarded-Proto 	$scheme;
-    		proxy_set_header   	X-Real-IP          	$remote_addr;
-    		proxy_set_header   	X-Forwarded-For    	$proxy_add_x_forwarded_for;
-
-    		proxy_buffering off;
-    		proxy_cache off;
-
-    		send_timeout 600;
-    		proxy_connect_timeout 600;
-    		proxy_send_timeout 600;
-    		proxy_read_timeout 600;
-    	}
-    }
+#     server {
+#         listen       80;
+#         listen       [::]:80;
+#         server_name  _;
+#         root         /usr/share/nginx/html;
+#
+#         # Load configuration files for the default server block.
+#         include /etc/nginx/default.d/*.conf;
+#
+#         error_page 404 /404.html;
+#         location = /404.html {
+#         }
+#
+#         error_page 500 502 503 504 /50x.html;
+#         location = /50x.html {
+#         }
+#     }
 
 # Settings for a TLS enabled server.
 #
